--- a/thefmarketer-core/thefmarketer/thefmarketer/appsettings.json
+++ b/thefmarketer-core/thefmarketer/thefmarketer/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\SQLSERVER2017;Database=thefmarketer;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
