--- a/thefmarketer-core/thefmarketer/thefmarketer/appsettings.json
+++ b/thefmarketer-core/thefmarketer/thefmarketer/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\SQLSERVER2017;Database=thefmarketer;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\SQLEXPRESS2014;Database=thefmarketer;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
