--- a/thefmarketer-core/thefmarketer/Fmarketer.DataAccess/Fmarketer.DataAccess.csproj
+++ b/thefmarketer-core/thefmarketer/Fmarketer.DataAccess/Fmarketer.DataAccess.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Fmarketer.Models\Fmarketer.Models.csproj" />
+  </ItemGroup>
+
 </Project>
