--- a/thefmarketer-core/thefmarketer/thefmarketer/Fmarketer.Api.csproj
+++ b/thefmarketer-core/thefmarketer/thefmarketer/Fmarketer.Api.csproj
@@ -10,10 +10,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Fmarketer.DataAccess\Fmarketer.DataAccess.csproj" />
+    <ProjectReference Include="..\Fmarketer.Models\Fmarketer.Models.csproj" />
   </ItemGroup>
 
 </Project>
