--- a/thefmarketer-core/thefmarketer/Fmarketer.Models/Fmarketer.Models.csproj
+++ b/thefmarketer-core/thefmarketer/Fmarketer.Models/Fmarketer.Models.csproj
@@ -8,4 +8,15 @@
     <ProjectReference Include="..\Fmarkerter.Base\Fmarkerter.Base.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Dto\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.0" />
+  </ItemGroup>
+
 </Project>
