--- a/thefmarketer-core/thefmarketer/Fmarketer.Business/Fmarketer.Business.csproj
+++ b/thefmarketer-core/thefmarketer/Fmarketer.Business/Fmarketer.Business.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Fmarketer.DataAccess\Fmarketer.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
