--- a/thefmarketer-core/thefmarketer/Fmarketer.DataAccess/Fmarketer.DataAccess.csproj
+++ b/thefmarketer-core/thefmarketer/Fmarketer.DataAccess/Fmarketer.DataAccess.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt-Core" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Fmarketer.Models\Fmarketer.Models.csproj" />
   </ItemGroup>
 
