--- a/thefmarketer-core/thefmarketer/thefmarketer/Fmarketer.Api.csproj
+++ b/thefmarketer-core/thefmarketer/thefmarketer/Fmarketer.Api.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Fmarketer.Business\Fmarketer.Business.csproj" />
     <ProjectReference Include="..\Fmarketer.DataAccess\Fmarketer.DataAccess.csproj" />
     <ProjectReference Include="..\Fmarketer.Models\Fmarketer.Models.csproj" />
   </ItemGroup>
