--- a/thefmarketer-core/thefmarketer/Fmarkerter.Base/Fmarketer.Base.csproj
+++ b/thefmarketer-core/thefmarketer/Fmarkerter.Base/Fmarketer.Base.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Fmarketer.DataAccess\Fmarketer.DataAccess.csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
   </ItemGroup>
 
 </Project>
