--- a/thefmarketer-core/thefmarketer/Fmarketer.Models/Fmarketer.Models.csproj
+++ b/thefmarketer-core/thefmarketer/Fmarketer.Models/Fmarketer.Models.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20180622050455_FixedMapping.cs" />
+    <Compile Remove="Migrations\20180622070535_FixedMappingv2.cs" />
+    <Compile Remove="Migrations\20180622070827_FixedMappingv2.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.1" />
