Fix errors with concurency error. Added UnitOfWork as global method to save the db context.

--- a/thefmarketer-core/thefmarketer/thefmarketer/appsettings.json
+++ b/thefmarketer-core/thefmarketer/thefmarketer/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS2014;Database=thefmarketer;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\MSSQLLOCALDB;Database=thefmarketer;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
