--- a/thefmarketer-ui/thefmarketer/package.json
+++ b/thefmarketer-ui/thefmarketer/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.1.1",
     "history": "^4.7.2",
+    "jquery": "^3.3.1",
     "npm": "^5.8.0",
+    "popper.js": "^1.14.3",
     "react": "^16.2.0",
-    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
